--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <div id="app">
         <input type="text" v-on:input="changeTitle">
         <p>{{ title }}</p>
+        <p>{{ sayHello() }}</p>
     </div>
     <script>
         new Vue({
@@ -17,6 +18,11 @@
             methods: {
                 changeTitle: function(event) {
                     this.title = event.target.value;
+                },
+
+                sayHello: function(){
+                    return 'Howdy!';
+
                 }
             }
         })
