--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 },
 
                 sayHello: function(){
-                    return 'Howdy!';
+                    return this.title;
 
                 }
             }
