--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
         <p><a v-bind:href="link">Bosch fun times</a></p>
         <p>{{ sayHello() }}</p>
         <p v-html="hurdygurdyLink"></p>
-        <button v-on:click="increase">Click me</button>
+        <!-- $event will store the event object -->
+        <button v-on:click="increase(2, $event)">Click me</button>
         <!-- trying out an event listener -->
         <p>{{ counter }}</p>
         <p v-on:mousemove="updateCoordinates">Coordinates: {{ x }} / {{ y }}</p>
+        <!-- Removing the above behavior from the line below.
+        Can also be done by simple writing v-on:mousemove.stop="" or using prevent. -->
+        <span v-on:mousemove="dummy">Nothing here</span>
     </div>
     <script>
         new Vue({
@@ -38,13 +42,17 @@
                     this.texty= "Let's hang out in a giant bubble!"
                     return this.texty;
                 },
-                increase: function() {
-                    this.counter++
+                increase: function(step, event) {
+                    // step takes in the 2 entered above
+                    this.counter += step;
                 },
                 updateCoordinates: function(event){
                 //   need to access the event object created above  
                 this.x = event.clientX;
                 this.y = event.clientY;
+                },
+                dummy: function(event) {
+                    event.stopPropagation();
                 }
             }
         })
